# sports-human-detection

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt
cnn/: dataset.py  model.py  people_detection.py  people_detection_util.py  test.py  train.py
data/data_processing/: create_crops.sh  extract_background_from_dataset.py  extract_people_from_dataset.py  split_train_valid_test.sh
include/field-detection/: FieldSegmentation.hpp  GreenFieldSegmentation.hpp
include/field-segmentation/: FieldSegmentation.hpp  GreenFieldSegmentation.hpp
include/people-detection/: PeopleDetector.hpp
include/people-segmentation/: PeopleSegmentation.hpp
include/pipeline/: Pipeline.hpp
include/team-specification/: TeamSpecification.hpp
include/utils/: Metrics.hpp  Utils.hpp
src/: main.cpp
src/field-detection/: FieldSegmentation.cpp  FieldSegmentation2.cpp  GreenFieldSegmentation.cpp
src/field-segmentation/: FieldSegmentation.cpp  FieldSegmentation1.cpp  FieldSegmentation2.cpp  GreenFieldSegmentation.cpp
src/people-detection/: PeopleDetector.cpp
src/people-segmentation/: PeopleSegmentation.cpp
src/pipeline/: Pipeline.cpp
src/team-specification/: TeamSpecification.cpp
src/utils/: Metrics.cpp  Metrics1.cpp  Metrics2.cpp  Metrics3.cpp  Utils.cpp
test/: DetectSegmentTeamFieldTest.cpp  DetectorSegmentationTeamTest.cpp  PeopleDetectorAndSegmentationTest.cpp  PeopleDetectorTest.cpp
